salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice__c/ERP_Invoice__c.object-meta.xml
<CustomObject>
    <label>Fatura</label>
    <nameField><displayFormat>FTR-{000000}</displayFormat><label>Fatura No</label><type>AutoNumber</type></nameField>
    <pluralLabel>Faturalar</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>