salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    
    <label>MÃ¼ÅŸteri</label>
    
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint><referenceTo>Account</referenceTo><relationshipLabel>ERP FaturalarÄ±</relationshipLabel><relationshipName>ERP_Invoices</relationshipName>
</CustomField>