salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    
    <label>Onay Durumu</label>
    
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Gerekli_Degil</fullName><default>false</default><label>Gerekli DeÄŸil</label></value><value><fullName>Bekliyor</fullName><default>false</default><label>Bekliyor</label></value><value><fullName>Onaylandi</fullName><default>false</default><label>OnaylandÄ±</label></value><value><fullName>Reddedildi</fullName><default>false</default><label>Reddedildi</label></value></valueSetDefinition></valueSet>
</CustomField>