salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    
    <label>Para Birimi</label>
    
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>TRY</fullName><default>false</default><label>TRY</label></value><value><fullName>USD</fullName><default>false</default><label>USD</label></value><value><fullName>EUR</fullName><default>false</default><label>EUR</label></value><value><fullName>GBP</fullName><default>false</default><label>GBP</label></value></valueSetDefinition></valueSet>
</CustomField>