salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    
    <label>Ä°ndirim TutarÄ±</label>
    
    <type>Currency</type>
    <precision>18</precision><scale>2</scale>
</CustomField>