salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice__c/fields/Document_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Date__c</fullName>
    
    <label>Fatura Tarihi</label>
    <required>true</required>
    <type>Date</type>
    
</CustomField>