salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice__c/fields/Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Document_Number__c</fullName>
    
    <label>Belge NumarasÄ±</label>
    <required>true</required>
    <type>Text</type>
    <length>80</length>
</CustomField>