salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    
    <label>Vade Tarihi</label>
    
    <type>Date</type>
    
</CustomField>