salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice__c/fields/E_Invoice_UUID__c.field-meta.xml
<CustomField>
    <fullName>E_Invoice_UUID__c</fullName>
    
    <label>e-Fatura UUID</label>
    
    <type>Text</type>
    <length>80</length>
</CustomField>