salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice__c/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    
    <label>DÃ¶viz Kuru</label>
    
    <type>Number</type>
    <precision>18</precision><scale>6</scale>
</CustomField>