salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    
    <label>AÃ§Ä±klama</label>
    
    <type>LongTextArea</type>
    <length>8000</length><visibleLines>4</visibleLines>
</CustomField>