salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice__c/fields/Overdue_Days__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Days__c</fullName>
    
    <label>Gecikme GÃ¼nÃ¼</label>
    
    <type>Number</type>
    <precision>6</precision><scale>0</scale>
</CustomField>