salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice__c/fields/Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Amount__c</fullName>
    
    <label>Tahsil Edilen</label>
    
    <type>Currency</type>
    <precision>18</precision><scale>2</scale>
</CustomField>