salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    
    <label>Ã–deme TÃ¼rÃ¼</label>
    
    <type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Nakit</fullName><default>false</default><label>Nakit</label></value><value><fullName>Kredi KartÄ±</fullName><default>false</default><label>Kredi KartÄ±</label></value><value><fullName>Havale / EFT</fullName><default>false</default><label>Havale / EFT</label></value><value><fullName>Vadeli</fullName><default>false</default><label>Vadeli</label></value></valueSetDefinition></valueSet>
</CustomField>