salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice__c/fields/Remaining_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Amount__c</fullName>
    
    <label>Kalan Bakiye</label>
    
    <type>Currency</type>
    <precision>18</precision><scale>2</scale>
</CustomField>