salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice__c/fields/Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total__c</fullName>
    
    <label>Ara Toplam</label>
    
    <type>Currency</type>
    <precision>18</precision><scale>2</scale>
</CustomField>