salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    
    <label>Toplam Tutar</label>
    
    <type>Currency</type>
    <precision>18</precision><scale>2</scale>
</CustomField>