salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    
    <label>Depo</label>
    
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint><referenceTo>ERP_Warehouse__c</referenceTo><relationshipLabel>Faturalar</relationshipLabel><relationshipName>Invoices</relationshipName>
</CustomField>