salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice__c/validationRules/Due_Date_Not_Before_Document_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_Not_Before_Document_Date</fullName><active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Due_Date__c)), Due_Date__c &lt; Document_Date__c)</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField><errorMessage>Vade tarihi fatura tarihinden Ã¶nce olamaz.</errorMessage>
</ValidationRule>