salesforce/ReSalesforceCore/force-app/main/default/objects/ERP_Invoice__c/validationRules/Paid_Amount_Cannot_Exceed_Total.validationRule-meta.xml
<ValidationRule>
    <fullName>Paid_Amount_Cannot_Exceed_Total</fullName><active>true</active>
    <errorConditionFormula>Paid_Amount__c &gt; Total_Amount__c</errorConditionFormula>
    <errorDisplayField>Paid_Amount__c</errorDisplayField><errorMessage>Tahsil edilen tutar fatura toplamÄ±nÄ± aÅŸamaz.</errorMessage>
</ValidationRule>